--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "scripts": {
     "start": "ts-node ./src/server.ts",
-    "build": "tsc && node ./dist/server.js"
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +28,8 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.14.2",
     "nodemon": "^2.0.20",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
