--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
   "builds": [
     {
       "src": "dist/server.js",
-      "use": "@now/node"
+      "use": "@now/node",
+      "config": { "includeFiles": ["dist/**"] }
     }
   ],
   "routes": [
