--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/server.js",
   "scripts": {
-    "start": "ts-node ./src/server.ts",
+    "start": "ts-node ./server/server.ts",
     "build": "rimraf dist && tsc",
     "ts.check": "tsc --project tsconfig.json",
     "nodemon": "rimraf dist && tsc && nodemon"
